--- a/css/style.css
+++ b/css/style.css
@@ -7,17 +7,87 @@
     box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
-    color: blue;
-    font-size: 20px;
-    font-weight: bold;
-
-    display: block;
-    margin: 10px 0;
-    cursor: pointer;
+.container {
+    max-width: 1400px;
+    padding: 0 40px;
 }
 
-a:visited {
-    color: cadetblue;
+body {
+    background-color: #168aad;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-size: 30px;
+
+    color: white;
+
+    margin: 20px 0;
+}
+
+.content {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+
+.box {
+    background-color: white;
+
+    border-radius: 6px;
+    width: 100%;
+    padding-bottom: 20px;
+
+    text-align: center;
+
+    overflow: hidden;
+}
+
+.box img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+
+    border-radius: 6px 6px 0 0;
+
+    transition: transform .5s;
+}
+
+.box img:hover {
+    transform: scale(1.05);
+}
+
+.box h2 {
+    color: black;
+    font-size: 24px;
+
+    margin: 20px 0;
+}
+
+.box p {
+    color: #222;
+
+    font-size: 18px;
+    line-height: 20px;
+    margin: 0 auto 20px;
+    max-width: 320px;
+}
+
+.box a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    text-decoration: none;
+    font-size: 24px;
+    color: black;
+}
+
+a i {
+    transition: transform .8s;
+}
+.box a:hover i {
+    transform: translateX(10px);
 }
